fixed dark mode icon error

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -456,7 +456,7 @@ img {
 
 .mudar-tema {
     position: fixed;
-    top: 83%;
+    top: 90%;
     left: 2%;
     cursor: pointer;
 }
@@ -471,6 +471,6 @@ img {
     box-shadow: 1px 1px 2px rgb(51, 51, 51);
     z-index:1000;
     box-sizing: content-box;
-    background-image: url('/assets/img/day-night-sun-moon-cycle-svgrepo-com.svg');
+    background-image: url('../img/day-night-sun-moon-cycle-svgrepo-com.svg');
     background-repeat: no-repeat;
 }
